[package]
name = "microlp"
version = "0.2.5"
authors = [
    "Alexey Zatelepin <alex.zatelepin@gmail.com>",
    "Specy <specy.dev@gmai.com"
]
edition = "2021"
license = "Apache-2.0"
description = "A fast linear programming solver library."
repository = "https://github.com/Specy/microlp/"
readme = "README.md"
keywords = ["linear-programming", "optimization"]
categories = ["mathematics", "science"]

[dependencies]
sprs = { version = "0.11.2", default-features = false }
log = "0.4.11"

[dev-dependencies]
ndarray = "0.16.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
env_logger = "0.11.5"
